多选编辑功能 一件复制功能

--- a/src/components/Form/OrderForm/OrderEditor/style.scss
+++ b/src/components/Form/OrderForm/OrderEditor/style.scss
@@ -50,6 +50,11 @@
         padding-right: 4px;
       }
 
+      // 添加：移动端隐藏二级标题
+      .secondary-label {
+        display: none !important;
+      }
+
       .el-row {
         .el-col {
           margin-bottom: 15px;
